@@ -218,8 +218,8 @@ for ($i = 0; $i < $nr_daemon; ++$i) {
     }
 }
 
-print "Sleeping 10 seconds to allow task to complete\n";
-sleep (10);
+print "Sleeping 1 seconds to allow task to complete\n";
+sleep (1);
 
 # Invoke executor - stop the application -.
 print "Invoking executor - stop the application -\n";
